base presentation list

--- a/Backend/N5/FrontEnd/n5app/src/App.css
+++ b/Backend/N5/FrontEnd/n5app/src/App.css
@@ -6,6 +6,9 @@
   height: 40vmin;
   pointer-events: none;
 }
+.checkbox:checked + .check-icon {
+  display: flex;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
